[workspace]
members = [
  "normal_map_gen",
  "bridge2",
  "conduit_particles",
  "texture_crossfade",
  "point_distribute",
  "cave",
  "terrain",
  "common",
  "stone",
]
resolver = "2"

[profile.release]
#debug-assertions = true
panic = "abort"
debug = 1
codegen-units = 1
lto = "fat"

[profile.dev]
debug-assertions = true
