[workspace]
members = [
  "normal_map_gen",
  "bridge2",
  "conduit_particles",
  "texture_crossfade",
  "point_distribute",
  "cave",
  "terrain",
  "common",
  "stone",
  "tessellation",
  "tessellation_sandbox",
  "basalt",
  "csg_sandbox",
  "geoscript",
  "geoscript_repl",
  "flight_recorder",
]
resolver = "2"

[profile.release]
#debug-assertions = true
panic = "abort"
debug = 1
codegen-units = 1
lto = "fat"

[profile.dev]
debug-assertions = true

# Fast-compile profile for local dev: thin LTO + parallel codegen units
# Skips fat LTO and CGU=1 which dominate the release build time.
# Use with: cargo build --profile dev-opt
[profile.dev-opt]
inherits = "release"
codegen-units = 16
lto = "thin"
