[package]
name = "basalt"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"
nalgebra = "0.34"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
mesh = { path = "../mesh" }
common = { path = "../common" }
tessellation = { path = "../tessellation", default-features = false }
bitvec = "1"
smallvec = "1.15"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
point_distribute = { path = "../point_distribute" }
fxhash = "0.2"
