[package]
name = "cave"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.82"
point_distribute = { path = "../point_distribute" }
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"
nalgebra = "0.31"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
console_error_panic_hook = "0.1"
common = { path = "../common" }
