[package]
name = "common"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[dependencies]
rand_pcg = "0.3"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
nalgebra = { version = "0.31", optional = true }
slotmap = { version = "1.0", optional = true }
fxhash = { version = "0.2", optional = true }
smallvec = { version = "1.13", optional = true }
bitvec = { version = "1", optional = true, default-features = false, features = ["alloc", "std"] }

[features]
mesh = ["nalgebra", "slotmap", "fxhash", "smallvec", "bitvec"]
