[package]
name = "conduit_particles"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.82"
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"
nanoserde = "0.1"
nalgebra = "0.31"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
rand_pcg = "0.3"
console_error_panic_hook = "0.1"
