[package]
name = "conduit_particles"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"
nanoserde = "0.1"
nalgebra = "0.33"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
rand_pcg = "0.3"
console_error_panic_hook = "0.1"
