[package]
name = "conduit_particles"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"
nanoserde = { version = "0.2", default-features = false, features = ["std", "json"], git = "https://github.com/ameobea/nanoserde", branch = "all-fixes" }
nalgebra = "0.34"
rand = { version = "0.10", default-features = false }
rand_pcg = "0.10"
console_error_panic_hook = "0.1"
