[package]
name = "csg_sandbox"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = { version = "0.4", features = [] }
# using an older version because new versions don't allow f32 noise anymore
noise = "0.4"

mesh = { path = "../mesh" }
tessellation = { path = "../tessellation" }
