[package]
name = "geoscript"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
fxhash = "0.2"
phf = { version = "0.11.3", features = ["macros"] }
wasm-bindgen = "=0.2.92"
itertools = "0.14"
nalgebra = "0.33"
log = "0.4"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
rand_pcg = "0.3"
noise = "0.4"

mesh = { path = "../mesh" }
point_distribute = { path = "../point_distribute" }
lazy_static = "1.5.0"
tessellation = { path = "../tessellation" }
