[package]
name = "geoscript"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
fxhash = "0.2"
phf = { version = "0.13.1", features = ["macros"] }
phf_shared = { version = "0.13.1" }
wasm-bindgen = "=0.2.92"
nalgebra = "0.34"
log = "0.4"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
rand_pcg = "0.3"
noise = "0.4"
nanoserde = { version = "0.2", default-features = false, features = ["std", "json"], git = "https://github.com/ameobea/nanoserde", branch = "all-fixes" }
smallvec = "1.15"
parry3d = "0.25"
paste = "1.0.15"
strum = { version = "0.27", features = ["derive"] }
lazy_static = "1.5"
arrayvec = "0.7"

mesh = { path = "../mesh" }
point_distribute = { path = "../point_distribute" }
tessellation = { path = "../tessellation" }
