[package]
name = "geoscript_repl"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = { version = "0.4", features = [] }

geoscript = { path = "../geoscript" }
mesh = { path = "../mesh" }
