[package]
name = "geoscript_repl"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = { version = "0.4", features = [] }
nanoserde = { version = "0.2", default-features = false, features = ["std", "json"], git = "https://github.com/ameobea/nanoserde", branch = "all-fixes" }
fxhash = "0.2"

geoscript = { path = "../geoscript" }
mesh = { path = "../mesh" }
