[package]
name = "mesh"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[dependencies]
nalgebra = "0.34"
slotmap = "1.0"
fxhash = "0.2"
smallvec = "1.15"
bitvec = { version = "1",  default-features = false, features = ["alloc", "std"] }
log = { version = "0.4", features = [] }
arrayvec = "0.7"
lyon_tessellation = "1.0"
parry3d = "0.25"

common = { path = "../common" }

[features]
# disables slotmap's checks for invalid keys
unsafe_indexing = []
broken-csg-welding = []

# enable this is you're very brave
# default = ["unsafe_indexing"]
