[package]
name = "point_distribute"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.31"
rand_pcg = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }

[features]
