[package]
name = "point_distribute"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"
common = { path = "../common" }
mesh = { path = "../mesh" }
log = "0.4"
rand_pcg = "0.3"
rand = { version = "0.8", default-features = false, features = ["nightly"] }

[features]
