[package]
name = "terrain"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand_pcg = "0.3"
rand = { version = "0.8", default-features = false, features = ["nightly"] }
common = { path = "../common" }
nanoserde = "0.1"
opensimplex_noise_rs = "0.3.0"

[features]
