[package]
name = "terrain"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand_pcg = "0.10"
rand = { version = "0.10", default-features = false }
common = { path = "../common" }
nanoserde = { version = "0.2", default-features = false, features = ["std", "json"], git = "https://github.com/ameobea/nanoserde", branch = "all-fixes" }
opensimplex_noise_rs = "0.3.0"

[features]
